--- a/application/index.html
+++ b/application/index.html
@@ -13,11 +13,22 @@
 		<link rel="stylesheet" href="css/style.css">
 	</head>
 	<body>
-		<div class="row" style="padding-bottom: 60px;" id="displayCecil">
-
-    	    
+		<header>
+			<h1>Cecil's Destiny</h1>
+			<h2>Final Fantasy IV</h2>
+		</header>
+		<div id="displayCecil">
+			<!-- <section>
+				<img src="assets/img/dark_knight_cecil.png" alt="image of Cecil as a Dark Knight">
+			</section>
+			<section>
+				<p>Cecil chose the path of the Dark Knight. The new and unfamiliar path of the alternative was too
+				 discomforting for him to stray from the path set out for him by his adopted family. Cecil's mother
+				 was disappointed, but she ultimately understood.</p>
+			</section> -->
     	</div>
 
 		<script type="text/javascript" src="js/main.js"></script>
+<footer class="clear"></footer>
 	</body>
 </html>
