web application and Lambda complete

--- a/application/index.html
+++ b/application/index.html
@@ -11,6 +11,10 @@
 		<!-- external CSS link -->
 		<link rel="stylesheet" href="css/normalize.css">
 		<link rel="stylesheet" href="css/style.css">
+		<link rel="preconnect" href="https://fonts.googleapis.com">
+		<link rel="preconnect" href="https://fonts.googleapis.com">
+		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+		<link href="https://fonts.googleapis.com/css2?family=Merriweather:ital@1&family=Niconne&family=Roboto&family=VT323&display=swap" rel="stylesheet">
 	</head>
 	<body>
 		<header>
@@ -18,17 +22,10 @@
 			<h2>Final Fantasy IV</h2>
 		</header>
 		<div id="displayCecil">
-			<section>
-				<img src="assets/img/dark_knight_cecil.png" alt="image of Cecil as a Dark Knight">
-			</section>
-			<section>
-				<p>Cecil chose the path of the Dark Knight. The new and unfamiliar path of the alternative was too
-				 discomforting for him to stray from the path set out for him by his adopted family. Cecil's mother
-				 was disappointed, but she ultimately understood.</p>
-			</section>
+
     	</div>
 
-		<!-- <script type="text/javascript" src="js/main.js"></script> -->
+		<script type="text/javascript" src="js/main.js"></script>
 <footer class="clear"></footer>
 	</body>
 </html>
